# searchy

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  load_es.py  pyproject.toml  server.py  sonar-project.properties
.github/workflows/: main.yaml
load/: load_es.py
service/: searchy.py
service/controllers/: __init__.py  base.py  elasicsearch_controller.py  redis_controller.py
service/routers/: __init__.py  searchy_router.py
service/utils/: logger.py  settings.py  utils.py
tests/: test_endpoints.py
